Put a CloudFront distrib in front of the prom2png service.

--- a/templates/server.html
+++ b/templates/server.html
@@ -10,7 +10,7 @@
       <td align="left">{{.MissionName}} ({{.MissionTimeFormatted}})</td>
     </tr>
     <tr>
-      <td colspan="2"><img src="http://img.glowie.xyz:8080/?width=900&height=450&g0.expr=gdcsst_players{server=%22{{.IPAddress}}:{{.Port}}%22}&g0.legend=Players%20Online"></td>
+      <td colspan="2"><img src="http://img.glowie.xyz/?width=900&height=450&g0.expr=gdcsst_players{server=%22{{.IPAddress}}:{{.Port}}%22}&g0.legend=Players%20Online"></td>
     </tr>
     <tr style="background-color: #f2f2f2">
       <th valign="top" align="right">Players&nbsp;(max)</th>
