--- a/templates/stats.html
+++ b/templates/stats.html
@@ -2,7 +2,7 @@
   <table width="80%" align="center" border="1">
     <tr><td align="center"><b>Servers and Players</b></td></tr>
     <tr><td align="center"><div id="meta-data"></div></td></tr>
-    <tr><td align="center" valign="top"><img src="http://img.glowie.xyz:8080/?width=900&height=450&g0.expr=gdcsst_online{scope=%22players%22}&g0.legend=Players%20Online&g1.expr=gdcsst_online{scope=%22servers%22}&g1.legend=Players%20Online"></div></td></tr>
+    <tr><td align="center" valign="top"><img src="http://img.glowie.xyz/?width=900&height=450&g0.expr=gdcsst_online{scope=%22players%22}&g0.legend=Players%20Online&g1.expr=gdcsst_online{scope=%22servers%22}&g1.legend=Players%20Online"></div></td></tr>
     <!--
     <tr><td align="center" valign="top"><div id="country-data-players" style="height: 1000px"></div></td></tr>
     <tr><td align="center" valign="top"><div id="country-data-all" style="height: 1500px"></div></td></tr>
