Updated the (public) TODO list.

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,6 +10,7 @@
     <li><a href="https://git-scm.com/">Git</a></li>
     <li><a href="https://golang.org/">Go</a></li>
     <li><a href="https://prometheus.io/">Prometheus</a></li>
+    <li><a href="https://github.com/lomik/prometheus-png/">Prometheus-PNG</a></li>
     <li><a href="https://redis.io/">Redis</a></li>
     <li><a href="https://aws.amazon.com/cloudfront/">AWS CloudFront</a> (Which as a pain to setup the first time)</li>
   </ul>
@@ -17,8 +18,7 @@
 <p>TODO:
   <ul>
     <li>Add nice server filters (need Javascript skills for that)</li>
-    <li>Have a dedicated server detector running. (No idea how to do this...)</li>
-    <li>Make it possible to search servers</li>
+    <li>Have a dedicated server detector running.</li>
   </ul>
 </p>
 <p>&nbsp;</p>
