golint, just STFU for a second pls.

--- a/templates/template.html
+++ b/templates/template.html
@@ -34,9 +34,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item {{ if .Active_Servers }}active{{end}}"><a class="nav-link" href="/servers">Servers</a></li>
-            <li class="nav-item {{ if .Active_Stats }}active{{end}}"><a class="nav-link" href="/stats">Stats</a></li>
-            <li class="nav-item {{ if .Active_About }}active{{end}}"><a class="nav-link" href="/about">About</a></li>
+            <li class="nav-item {{ if .ActiveServers }}active{{end}}"><a class="nav-link" href="/servers">Servers</a></li>
+            <li class="nav-item {{ if .ActiveStats }}active{{end}}"><a class="nav-link" href="/stats">Stats</a></li>
+            <li class="nav-item {{ if .ActiveAbout }}active{{end}}"><a class="nav-link" href="/about">About</a></li>
           </ul>
         </div>
       </div>
